--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,15 @@
     <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a href="{% url 'home' %}" class="navbar-brand">PyShop12</a>
+<!--   Is authenticated   -->
+      {% if not request.user.is_authenticated %}
+      <a href="{% url 'register' %}">Sign Up</a>
+      <a href="{% url 'login' %}">Login</a>
+      {% else %}
+      <h4>{{ request.user.username }}</h4>
+      <a href="{% url 'logout' %}">Logout</a>
+      {% endif %}
+<!--   End is authenticated   -->
       <a href="{% url 'create-product' %}"><img style="width: 20px; height: 20px;" src="{% static 'img/plus.png' %}"></a>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
