--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -20,4 +20,35 @@
   </div>
 {% endfor %}
 </div>
+
+<!--  Pagination  -->
+{% if is_paginated %}
+  <div style="display: flex; justify-content: center;">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="{% url 'list' category %}?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        {% endif %}
+
+        <li class="page-item"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
+
+        {% if page_obj.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="{% url 'list' category %}?page={{ page_obj.next_page_number }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        {% endif %}
+
+      </ul>
+    </nav>
+  </div>
+{% endif %}
+<!--  End pagination -->
+
 {% endblock %}
