--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,10 @@
       {% if request.user.is_authenticated and request.user.is_superuser %}
       <a href="{% url 'create-product' %}"><img style="width: 20px; height: 20px;" src="{% static 'img/plus.png' %}"></a>
       {% endif %}
+<!--   End permission to create   -->
+
+      <a href="{% url 'cart_detail' %}"><img style="width: 30px; height: auto;" src="{% static 'img/carts.png' %}"></a>
+
 <!--   Search   -->
     <form class="d-flex" method="get" action="{% url 'search' %}">
       <input name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
